--- a/ClientApp/src/components/ProductsGrid/style.module.css
+++ b/ClientApp/src/components/ProductsGrid/style.module.css
@@ -1,11 +1,11 @@
 .gridContainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 16px; /* Adjust gap size as needed */
-    padding: 16px;  /* Adjust padding as needed */
+    grid-gap: 16px;
+    padding: 16px; 
   }
   
-  /* Add responsive design for smaller screens */
+ 
   @media (max-width: 768px) {
     .gridContainer {
       grid-template-columns: repeat(2, 1fr);
