--- a/ClientApp/src/components/UI/Cart/style.module.css
+++ b/ClientApp/src/components/UI/Cart/style.module.css
@@ -1,5 +1,22 @@
 .cartGrid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 16px; 
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 16px;
+}
+.buttonContainer{
+  height: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 1200px) {
+  .cartGrid {
+    grid-template-columns: repeat(2, 1fr);
   }
+}
+
+@media (max-width: 768px) {
+  .cartGrid {
+    grid-template-columns: 1fr;
+  }
+}
